add style to mainpage

--- a/views/mainpage.ejs
+++ b/views/mainpage.ejs
@@ -3,24 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/stylesheets/style.css">
     <title>Document</title>
 </head>
 <body>
-    <header>
+    <header id="header">
         <ul>
             <li>Quantrl</li>
             <li>About</li>
         </ul>
     </header>
-    <section>
-        <div>
+    <section id="section">
+        <div id="url-input">
             <form action="" method="post">
                 <input type="text" name="bigurl" id="bigurl">
                 <button type="submit">Quantrl</button>
             </form>
         </div>
+        <div id="new-quantrl">
+            <p>Your quantrl will appear here</p>
+        </div>
     </section>
-    <footer>
+    <footer id="footer">
         <p>Made with love by karthicbz</p>
     </footer>
 </body>
