--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,81 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
+
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
-a {
-  color: #00B7FF;
+html, body{
+  height: 100%;
+  font-family: 'Poppins', sans-serif;
+}
+
+body{
+  background-color: rgb(61, 42, 30);
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 10% 1fr 10%;
+}
+
+#header{
+  background-color: rgb(146, 93, 60);
+  grid-column: 1/2;
+  grid-row: 1/2;
+  display: grid;
+  align-items: center;
+  border-bottom-left-radius: 1rem;
+  border-bottom-right-radius: 1rem;
+}
+
+#header>ul{
+  display: flex;
+  align-items: center;
+}
+
+#header>ul>li{
+  list-style-type: none;
+  padding: 0px 1.5rem;
+  color: rgb(238, 216, 201);
+}
+
+#header>ul>li:first-child{
+  margin-right: auto;
+  font-size: 2.5rem;
+  font-weight: 700;
+}
+
+#section{
+  grid-column: 1/2;
+  grid-row: 2/3;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 30% 70%;
+  align-items: center;
+  justify-items: center;
+}
+
+#footer{
+  grid-column: 1/2;
+  grid-row: 3/4;
+  display: grid;
+  align-items: end;
+  justify-items: center;
+}
+
+form>input, form>button{
+  font-size: 1.5rem;
+  padding: 8px 12px;
+  border-radius: 50px;
+}
+
+form>button{
+  border: none;
+  background-color: rgb(146, 93, 60);
+  color: rgb(238, 216, 201);
+  box-shadow: 0px 2px 0px 1px #432c20;
+}
+
+form>button:hover{
+  cursor: pointer;
 }
