added modules for initial deployment

--- a/views/mainpage.ejs
+++ b/views/mainpage.ejs
@@ -33,7 +33,7 @@
             <% }else{ %>
                 <div id="new-quantrl">
                     <p>Your new quantrl</p>
-                    <a href="/quantrl/<%=quantrlDetails%>">http://localhost:3000/quantrl/<%= quantrlDetails %></a>
+                    <a href="/<%=quantrlDetails%>">http://localhost:3000/<%= quantrlDetails %></a>
                 </div>
             <%}%>
         </div>
